--- a/pytest.ini
+++ b/pytest.ini
@@ -11,7 +11,16 @@ addopts =
     --cov=src
     --cov-report=term-missing
     --cov-report=html:htmlcov
+    --cov-report=xml:coverage.xml
+    --cov-fail-under=90
 markers =
     unit: Unit tests
     integration: Integration tests
     e2e: End-to-end tests
+    performance: Performance and benchmark tests
+    edge_case: Edge case and error condition tests
+    slow: Slow running tests (typically >5 seconds)
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+timeout = 300
