--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,40 @@
 -r requirements.txt
+
+# Testing framework
 pytest>=7.0.0
 pytest-asyncio>=0.21.0
 pytest-mock>=3.10.0
 pytest-cov>=4.0.0
+pytest-html>=3.1.0
+pytest-timeout>=2.1.0
+pytest-xdist>=3.0.0
+pytest-benchmark>=4.0.0
 httpx-mock>=0.9.0
+
+# Code quality and formatting
 black>=23.0.0
+isort>=5.12.0
+flake8>=6.0.0
+pylint>=2.17.0
 mypy>=1.0.0
 ruff>=0.1.0
+
+# Security scanning
+bandit>=1.7.0
+safety>=2.3.0
+
+# Documentation
+sphinx>=6.0.0
+sphinx-rtd-theme>=1.2.0
+sphinx-autodoc-typehints>=1.20.0
+
+# Pre-commit hooks
+pre-commit>=3.0.0
+
+# Performance profiling
+memory-profiler>=0.60.0
+line-profiler>=4.0.0
+
+# Development utilities
+ipython>=8.0.0
+jupyter>=1.0.0
